--- a/style.css
+++ b/style.css
@@ -20,6 +20,24 @@ main {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+}
+
+.container_principal{
+    max-width: 900px;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_principal aside{
+    width: 40%;
+    height: 100%;
+    margin-right: 20px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0px 0px 30px;
 }
 
 footer {
