--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 main {
-    max-width: 900px;
+    max-width: 1200px;
     margin: auto;
     height: 100vh;
     background: #fff;
@@ -24,10 +24,10 @@ main {
 }
 
 .container_principal{
-    max-width: 900px;
+    max-width: 1200px;
     height: 90%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -40,7 +40,36 @@ main {
     padding: 10px 0px 0px 30px;
 }
 
+.containerCards{
+    width: 60%;
+    height: 100%;
+    background-color: #e2e2e2;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.container_cards{
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.card_html{
+    width: 100px;
+    height: 70px;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
 footer {
+     max-width: 1200px;
     text-align: center;
     padding: 10px;
     background: #333;
