--- a/style.css
+++ b/style.css
@@ -40,15 +40,15 @@
     padding: 10px 0px 0px 30px;
 } */
 
-.containerCards{
+/* .containerCards{
     width: 60%;
     height: 100%;
     background-color: #e2e2e2;
     padding: 10px 20px;
     border-radius: 5px;
-}
+} */
 
-.container_cards{
+/* .container_cards{
     display: flex;
     gap: 20px;
     margin-top: 20px;
@@ -66,14 +66,14 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: background-color 0.3s ease;
-}
+} */
 
 .icons {
     font-size: 40px;
     color: cornflowerblue;
 }
 
-footer {
+/* footer {
      max-width: 1200px;
     text-align: center;
     padding: 10px;
@@ -87,4 +87,4 @@ footer {
 h1, h2, h3 {
     font-family: 'Arial', sans-serif;
     color: #333;
-}
+} */
